@@ -1,5 +1,10 @@
 2006-09-11 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: show correct statusmessage when performing the
+	  readonly test.
+
+2006-09-11 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* src/GParted_Core.cc: reverted back to parted probing after i heard
 	  patches to fix some issues with it are underway. (skipping of floppy
 	  and cdrom)
